--- a/app/views/analysispaperexams/new.html.erb
+++ b/app/views/analysispaperexams/new.html.erb
@@ -2,14 +2,17 @@
 <h3>New Analysis Examination Paper</h3>
 
 	<% form_tag :action => 'create' do |f|%>
+	<div class="tform">
 		<% @analysispaperexams.each_with_index do |analysispaperexam, index| %>
 			<% fields_for "analysispaperexams[#{index}]", analysispaperexam do |f| %>
 				<%=render :partial => 'form_by_paper_by_programme', :locals => {:f => f,:index=>index} %>
 			<% end %>	<!-- end of - @exammarks.each_with_index -->
-		    <% end %>	<!-- end of - fields_for "exammarks[#{index}]"-->
-			<!-- end of - form_tag :action => 'create' do |f| %>-->
+		 <% end %>	<!-- end of - fields_for "exammarks[#{index}]"-->
+		<br>	
 		<%= f.submit 'Create By Paper',:name => :new_submit %>
-	<% end %>
+		<br><br>
+	</div>
+	<% end %><!-- end of - form_tag :action => 'create' do |f| %>-->
 		
 <% end %><!--end-trial new exammark by exampaper (filtered by programme)-12Sept2012-->
 
