--- a/app/views/examquestions/_form.html.erb
+++ b/app/views/examquestions/_form.html.erb
@@ -40,7 +40,7 @@
 <table>	
 	
 	<tr>
-		<td class="leftcol"><label for="status">Add Attachment :</label></td>
+		<td class="leftcol"><label for="status">Add Diagram </label></td>
 		<td><b>:</b></td>
 		<td><%= f.file_field :diagram %></td>
 	</tr>
