--- a/app/views/analysispaperexams/_included_subject_exammarks.html.erb
+++ b/app/views/analysispaperexams/_included_subject_exammarks.html.erb
@@ -1,8 +1,12 @@
-<%= select_tag "analysispaperexams[#{@index}][exam_id]", "<option></option>" + options_from_collection_for_select(@analysispaperexam_items, :id, :subject_of_exammaker),
+<% unless @course_id.blank?%>
+	<%= select_tag "analysispaperexams[#{@index}][exam_id]", "<option value=''>Select an exam paper</option>" + options_from_collection_for_select(@analysispaperexam_items, :id, :subject_of_exammaker),
 			{:onchange => remote_function(:update => "analysispaperexams_#{@index}_student_list", 
 			:url => {:action => 'view_students_programme' }, 
-			:with => "'examid='+$('"+"analysispaperexams_#{@index}_exam_id"+"').value " )}
+			:with => "'examid='+$('"+"analysispaperexams_#{@index}_exam_id"+"').value+'&programmeid='+'#{@course_id}'" )}
 %><br><br>
-
 			
-<%= tag("div", :id => "analysispaperexams_#{@index}_student_list") %> </div>
+<%= tag("div", :id => "analysispaperexams_#{@index}_student_list") %></div>
+
+<% else %>
+	Please select a programme.
+<% end %>
