Minor updates on Lesson Plan - (card:Subject Mgmt:unable to add new topics) - duration field

--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -31,7 +31,7 @@
 	<tr>
 		<td class="leftcol"><label for="duration">Duration For Topic</label></td>
 		<td><b>:</b></td>
-		<td><%=h @topic.durahours %>:<%=h @topic.duramins %> Hours</td>
+		<td>0<%=h @topic.durahours %>:<%=h @topic.duramins %> Hours</td>
 	</tr>
 </table>
 <H2>Training Plan Details</H2>
