--- a/app/views/viewer/_notifications.html.erb
+++ b/app/views/viewer/_notifications.html.erb
@@ -48,16 +48,23 @@
   	<% end %>
 
 	<!-- Notification for Student Discipline -->
-	<% a = Sdicipline.count(:all, :conditions => ["warden_id=? AND status=?", User.current_user.staff_id, "New"]) %>
-	<% b = Sdicipline.count(:all, :conditions => ["status=? AND action IS ? AND closedtcollege IS ? ", "Refer to Mentor", nil, nil]) %>
-	<% c = Sdicipline.count(:all, :conditions => ["caunsellor_id=? AND status=? AND action IS ? AND closedtcollege IS ? ",User.current_user.staff_id, "Refer to Counsellor", nil, nil]) %>
-	<% d = Sdicipline.count(:all, :conditions => ["commandant_id=? AND status=? AND jtkpdecision IS ? AND jtkpdescisionrxdt IS ? AND closedtcollege IS ? ",User.current_user.staff_id,  
-	                                              "Refer to Komandan", nil, nil,nil]) %>
+	<% if User.current_user.staff.mentors.count>0 %>
+		<% @mentees_ids = User.current_user.staff.mentors[0].mentees.map(&:id)%>
+	<% end %>
+	<% a = Sdicipline.count(:all, :conditions => ["warden_id=? AND (status=? OR status=?)", User.current_user.staff_id, "New","Open"]) %>
+	<% b = Sdicipline.count(:all, :conditions => ["status=? AND action IS ? AND closedtcollege IS ? AND mentor_id IN (?)", "Refer to Mentor", nil, nil, @mentees_ids]) %> 
+	<% c = Sdicipline.count(:all, :conditions => ["caunsellor_id=? AND status=? AND (action IS ? OR action=?) AND closedtcollege IS ? ",User.current_user.staff.position.id, "Refer to Counsellor", nil,'', nil]) %>
+	<% d = Sdicipline.count(:all, :conditions => ["commandant_id=? AND status=? AND jtkpdecision IS ? AND jtkpdescisionrxdt IS ? AND closedtcollege IS ? ",User.current_user.staff.position.id, "Refer to Komandan", nil, nil,nil]) %>
+	<% e = Sdicipline.count(:all, :conditions => ["commandant_id=? AND status=? AND (jtkpdecision IS NOT NULL OR appealdecision IS NOT NULL)", User.current_user.staff.position.id, "Refer to Komandan"])%>
 	<% dash_dicipline = a+b+c+d %>
 	<% if dash_dicipline == 0 %>
-	  	<% else %>
+		<% if e>0 %>
+			<%=e%> <%= link_to "Student Discipline Requires Closing", { :controller => "sdiciplines", :action => "index" } %><br>
+		<% end %>
+	<% else %>
 	    	<%= dash_dicipline %> <%= link_to "Student Discipline To Take Action", { :controller => "sdiciplines", :action => "index" } %><br>
 	<% end %>
+	
 	
 	<!-- Notification for Staff Apply Stock -->
 	<% a = Stock.count(:all, :conditions => ["approver_id=? AND status=?", User.current_user.staff_id, 1]) %>
