--- a/app/views/sdiciplines/_show_report_details.html.erb
+++ b/app/views/sdiciplines/_show_report_details.html.erb
@@ -1,7 +1,7 @@
 <H2>Report Details</H2>
   <table width=100% border=0>
 	<tr>
-		<td width=23% colspan=2><label for="reportedby_id"><font size=2>&nbsp;Reported By</font></label></td>
+		<td width=23% colspan=2><label for="reportedby_id"><font size=2>Reported By</font></label></td>
 		<td width=3%><b>:</b></td>
 		<td><%=h @sdicipline.reporter_details %></td>
 	</tr>
