--- a/app/views/programmes/show.html.erb
+++ b/app/views/programmes/show.html.erb
@@ -1,6 +1,6 @@
 <div class="tform">
 	
-	<H2>Programme Details</H2>
+	<H2>Course (Programme) Details</H2>
   <table width=100% border=0>
 		<tr>
 			<td class="leftcol"><label for="code">Course Code</label></td>
