--- a/app/views/topics/_training_note_fields.html.erb
+++ b/app/views/topics/_training_note_fields.html.erb
@@ -1,4 +1,11 @@
 <div class="fields">
+	<font color=#444 size=-2>
+		<% if f.object.document!= nil %>
+				Current file is : <b><%= f.object.document_file_name %></b> &nbsp;&nbsp;&nbsp;
+	    		<%= link_to (t 'document.download'), f.object.document.url %> 
+				<BR>Or 
+			<% end %>
+		</font>
 	<%= f.file_field :document %> &nbsp;   &nbsp;<BR>
 	<%= f.text_field :title, :placeholder => 'Title', :size => '50x1' %>
 	<%= f.text_field :version, :placeholder => 'Version', :size => '6x1' %>  &nbsp;   &nbsp; <BR>
