--- a/app/views/topics/_training_note_fields.html.erb
+++ b/app/views/topics/_training_note_fields.html.erb
@@ -6,7 +6,7 @@
 				<BR>Or 
 			<% end %>
 		</font>
-	<%= f.file_field :document %> &nbsp;   &nbsp;<BR>
+	<%= f.file_field :document %>&nbsp;&nbsp;<BR><font color=grey size=-2>(Supported Format : .pdf/.doc/.docs/.xls/.xlsx/.png/.jpg/.txt)</font><BR>
 	<%= f.text_field :title, :placeholder => 'Title', :size => '50x1' %>
 	<%= f.text_field :version, :placeholder => 'Version', :size => '6x1' %>  &nbsp;   &nbsp; <BR>
 	Release Date <%= f.date_select :release %><%= f.hidden_field :_destroy %>
